Fixed overflow-x bug, added calalog page, created greeting block for it

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -272,3 +272,7 @@ body::-webkit-scrollbar-thumb {
   background-color: #232323;
 }
 
+
+.catalog-head-block {
+
+}
